CSS: Fix alignment of action icon in tables

--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -21,6 +21,7 @@
 }
 
 .icon-col {
+  text-align: center;
   width: 1em;
 }
 
